--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "501:5432"
+      - "500:5432"
     volumes:
-      - dgtpgdata:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
   pgadmin:
     container_name: pgadmin4-8.13
     image: dpage/pgadmin4:8.13
@@ -19,39 +19,18 @@ services:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
     ports:
-      - "5051:80"
+      - "5050:80"
     volumes:
-      - dgtpgadmin:/var/lib/pgadmin
+      - pgadmin:/var/lib/pgadmin
     depends_on:
       - db
-  dgt-nest:
-    container_name: dgt-nest
-    image: dgt-nest:1
-    restart: always
-    ports:
-      - "3001:3000"
-    volumes:
-      - type: bind
-        source: /etc/letsencrypt/live/${URL}/privkey.pem
-        target: /etc/letsencrypt/live/${URL}/privkey.pem
-      - type: bind
-        source: /etc/letsencrypt/live/${URL}/cert.pem
-        target: /etc/letsencrypt/live/${URL}/cert.pem
-    links:
-      - db
-    depends_on:
-      - db
-  dgt-java:
-    container_name: dgt-java
-    image: dgt-java:1
-    restart: always
-    ports:
-      - "3002:3000"
-    links:
-      - db
-    depends_on:
-      - db
+#  nest-dgt:
+#    container_name: nest-dgt
+#    image: nest-dgt:1
+#    restart: always
+#    ports:
+#      - "3000:3000"
 
 volumes:
-  dgtpgdata:
-  dgtpgadmin:
+  pgdata:
+  pgadmin:
