--- a/nest/dockerfile
+++ b/nest/dockerfile
@@ -1,4 +1,4 @@
-FROM node:18
+FROM node:23-slim
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
@@ -8,4 +8,4 @@ RUN npm run build
 EXPOSE 3000
 CMD ["npm", "run", "start:prod"]
 # To build docker image run:
-# sudo docker build -t dgt-nest .
+# sudo docker buildx build -t nest-dgt:1 .
