--- a/nest/dockerfile
+++ b/nest/dockerfile
@@ -3,7 +3,7 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
 COPY . .
-COPY .env ./
+COPY .env.docker ./.env
 RUN npm run build
 EXPOSE 3000
 CMD ["npm", "run", "start:prod"]
