--- a/vue/package.json
+++ b/vue/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@vueuse/core": "^13.1.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
